--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "node-red-contrib-webduino",
-  "version": "0.0.7",
+  "version": "0.0.8",
   "description": "Node-RED nodes for Webduino",
   "repository": "https://github.com/webduinoio/node-red-contrib-webduino.git",
   "homepage": "http://webduino.io",
@@ -14,7 +14,8 @@
       "board": "board.js",
       "led": "led.js",
       "dht": "dht.js",
-      "photocell": "photocell.js"
+      "photocell": "photocell.js",
+      "irraw": "irraw.js"
     }
   },
   "license": "MIT",
