--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "node-red-contrib-webduino",
-  "version": "0.0.12",
+  "version": "0.0.14",
   "description": "Node-RED nodes for Webduino",
   "repository": "https://github.com/webduinoio/node-red-contrib-webduino.git",
   "homepage": "http://webduino.io",
@@ -15,7 +15,9 @@
       "led": "led.js",
       "dht": "dht.js",
       "photocell": "photocell.js",
-      "irraw": "irraw.js"
+      "irraw": "irraw.js",
+      "relay": "relay.js",
+      "soil": "soil.js"
     }
   },
   "license": "MIT",
